--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
                 <version>2.11</version>
                 <configuration>
                     <skip>true</skip>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
                 </configuration>
                 <executions>
                     <execution>
